update(ChapterDetail + DownloadingChapters): update download

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,11 @@
             android:icon="@drawable/ic_file_download_white_24dp"
             android:title="Downloaded comics" />
 
+        <item
+            android:id="@+id/downloadingChaptersFragment"
+            android:icon="@drawable/ic_file_download_white_24dp"
+            android:title="Downloading" />
+
     </group>
 
     <item android:title="Communicate">
