--- a/app/src/main/res/layout/item_recycler_downloaded_comics.xml
+++ b/app/src/main/res/layout/item_recycler_downloaded_comics.xml
@@ -1,197 +1,227 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/colorCardBackground"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="4dp"
-    app:cardPreventCornerOverlap="false"
-    app:cardUseCompatPadding="true">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_margin="12dp"
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/image_comic"
-            android:layout_width="120dp"
-            android:layout_height="0dp"
-            android:scaleType="fitXY"
-            app:layout_constraintDimensionRatio="H,2:3"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/backgrounds/scenic[7]" />
-
-        <TextView
-            android:id="@+id/text_comic_name"
+        <View
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:maxLines="2"
-            android:padding="2dp"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:layout_height="match_parent"
+            android:background="@color/colorRedAccent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/image_comic"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Thuần Tình Nha Đầu Hoả Lạt Lạt Thuần Tình Nha Đầu Hoả Lạt Lạt" />
+            app:layout_constraintStart_toEndOf="@id/guideline2">
 
-        <ImageView
-            android:id="@+id/image_eye_or_clock"
+        </View>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="8dp"
-            android:padding="4dp"
-            app:layout_constraintEnd_toStartOf="@+id/text_view"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@+id/image_comic"
-            app:layout_constraintTop_toBottomOf="@+id/text_comic_name"
-            app:srcCompat="@drawable/ic_remove_red_eye_white_24dp" />
-
-        <TextView
-            android:id="@+id/text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:lines="1"
-            android:maxLines="1"
-            android:paddingEnd="16dp"
-            android:textAlignment="viewStart"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/image_eye_or_clock"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/image_eye_or_clock"
-            app:layout_constraintTop_toTopOf="@+id/image_eye_or_clock"
-            tools:text="1.234.567" />
-
-        <TextView
-            android:id="@+id/text_chapter_name_2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:lines="1"
-            android:maxLines="1"
-            android:textAlignment="viewStart"
-            android:textColor="#E6FFFFFF"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_2"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/image_comic"
-            app:layout_constraintTop_toBottomOf="@+id/text_chapter_name_1"
-            tools:text="Chapter 428" />
-
-        <TextView
-            android:id="@+id/text_chapter_time_2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:lines="1"
-            android:maxLines="1"
-            android:textAlignment="viewEnd"
-            android:textColor="#BFFFFFFF"
-            android:textSize="12sp"
-            android:textStyle="italic"
-            app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/text_chapter_name_2"
-            tools:text="20:32, 20/05/2019" />
-
-        <TextView
-            android:id="@+id/text_chapter_name_1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:lines="1"
-            android:maxLines="1"
-            android:textAlignment="viewStart"
-            android:textColor="#E6FFFFFF"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_1"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/image_comic"
-            app:layout_constraintTop_toBottomOf="@+id/image_eye_or_clock"
-            tools:text="Chapter 428" />
-
-        <TextView
-            android:id="@+id/text_chapter_time_1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:lines="1"
-            android:maxLines="1"
-            android:textAlignment="viewEnd"
-            android:textColor="#BFFFFFFF"
-            android:textSize="12sp"
-            android:textStyle="italic"
-            app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/text_chapter_name_1"
-            tools:text="20:32, 20/05/2019" />
-
-        <TextView
-            android:id="@+id/text_chapter_name_3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:lines="1"
-            android:maxLines="1"
-            android:textAlignment="viewStart"
-            android:textColor="#E6FFFFFF"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_3"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/image_comic"
-            app:layout_constraintTop_toBottomOf="@+id/text_chapter_name_2"
-            tools:text="Chapter 428" />
-
-        <TextView
-            android:id="@+id/text_chapter_time_3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:lines="1"
-            android:maxLines="1"
-            android:textAlignment="viewEnd"
-            android:textColor="#BFFFFFFF"
-            android:textSize="12sp"
-            android:textStyle="italic"
-            app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/text_chapter_name_3"
-            tools:text="20:32, 20/05/2019" />
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.8" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/colorCardBackground"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true"
+        tools:visibility="visible">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/image_comic"
+                android:layout_width="120dp"
+                android:layout_height="0dp"
+                android:scaleType="fitXY"
+                app:layout_constraintDimensionRatio="H,2:3"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/backgrounds/scenic[7]" />
+
+            <TextView
+                android:id="@+id/text_comic_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/google_sans"
+                android:maxLines="2"
+                android:padding="2dp"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/image_comic"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Thuần Tình Nha Đầu Hoả Lạt Lạt Thuần Tình Nha Đầu Hoả Lạt Lạt" />
+
+            <ImageView
+                android:id="@+id/image_eye_or_clock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="8dp"
+                android:padding="4dp"
+                app:layout_constraintEnd_toStartOf="@+id/text_view"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toEndOf="@+id/image_comic"
+                app:layout_constraintTop_toBottomOf="@+id/text_comic_name"
+                app:srcCompat="@drawable/ic_remove_red_eye_white_24dp" />
+
+            <TextView
+                android:id="@+id/text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="@font/google_sans"
+                android:lines="1"
+                android:maxLines="1"
+                android:paddingEnd="16dp"
+                android:textAlignment="viewStart"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@+id/image_eye_or_clock"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/image_eye_or_clock"
+                app:layout_constraintTop_toTopOf="@+id/image_eye_or_clock"
+                tools:text="1.234.567" />
+
+            <TextView
+                android:id="@+id/text_chapter_name_2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/google_sans"
+                android:lines="1"
+                android:maxLines="1"
+                android:textAlignment="viewStart"
+                android:textColor="#E6FFFFFF"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_2"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/image_comic"
+                app:layout_constraintTop_toBottomOf="@+id/text_chapter_name_1"
+                tools:text="Chapter 428" />
+
+            <TextView
+                android:id="@+id/text_chapter_time_2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/google_sans"
+                android:lines="1"
+                android:maxLines="1"
+                android:textAlignment="viewEnd"
+                android:textColor="#BFFFFFFF"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/text_chapter_name_2"
+                tools:text="20:32, 20/05/2019" />
+
+            <TextView
+                android:id="@+id/text_chapter_name_1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/google_sans"
+                android:lines="1"
+                android:maxLines="1"
+                android:textAlignment="viewStart"
+                android:textColor="#E6FFFFFF"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_1"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/image_comic"
+                app:layout_constraintTop_toBottomOf="@+id/image_eye_or_clock"
+                tools:text="Chapter 428" />
+
+            <TextView
+                android:id="@+id/text_chapter_time_1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/google_sans"
+                android:lines="1"
+                android:maxLines="1"
+                android:textAlignment="viewEnd"
+                android:textColor="#BFFFFFFF"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/text_chapter_name_1"
+                tools:text="20:32, 20/05/2019" />
+
+            <TextView
+                android:id="@+id/text_chapter_name_3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/google_sans"
+                android:lines="1"
+                android:maxLines="1"
+                android:textAlignment="viewStart"
+                android:textColor="#E6FFFFFF"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_3"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/image_comic"
+                app:layout_constraintTop_toBottomOf="@+id/text_chapter_name_2"
+                tools:text="Chapter 428" />
+
+            <TextView
+                android:id="@+id/text_chapter_time_3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/google_sans"
+                android:lines="1"
+                android:maxLines="1"
+                android:textAlignment="viewEnd"
+                android:textColor="#BFFFFFFF"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/text_chapter_name_3"
+                tools:text="20:32, 20/05/2019" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+</com.chauthai.swipereveallayout.SwipeRevealLayout>
