--- a/app/src/main/res/layout/item_recycler_downloaded_comics.xml
+++ b/app/src/main/res/layout/item_recycler_downloaded_comics.xml
@@ -3,28 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/swipe_reveal_layout"
+    app:dragEdge="right"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_margin="12dp"
-        android:layout_height="wrap_content">
+        android:layout_width="96dp"
+        android:layout_height="match_parent">
 
-        <View
+        <TextView
+            android:id="@+id/text_delete"
+            android:layout_height="0dp"
+            android:layout_marginTop="6dp"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="6dp"
+            android:clickable="true"
             android:background="@color/colorRedAccent"
+            android:ellipsize="end"
+            android:focusable="true"
+            android:fontFamily="@font/google_sans"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:gravity="center"
+            android:maxLines="1"
+            android:padding="2dp"
+            android:text="Delete"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guideline2">
-
-        </View>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.8" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -40,7 +51,7 @@
         app:cardElevation="4dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
-        tools:visibility="visible">
+        tools:visibility="invisible">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
