--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -174,6 +174,6 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.hoc.comicapp.ui.login.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="Login" />
 
 </navigation>
