--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -174,6 +174,21 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.hoc.comicapp.ui.login.LoginFragment"
-        android:label="Login" />
+        android:label="Login">
+
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.hoc.comicapp.ui.register.RegisterFragment"
+        android:label="Register" />
 
 </navigation>
