--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,12 +5,12 @@
     android:id="@+id/root_login_frag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorCardBackground">
+    android:background="@color/colorBackground">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
-        android:layout_height="46dp"
+        android:layout_height="40dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/edit_email"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:hint="Email"
         app:boxBackgroundColor="@color/colorCardBackground"
@@ -33,7 +33,7 @@
         app:endIconMode="none"
         app:errorEnabled="true"
         app:errorIconDrawable="@null"
-        app:errorTextColor="@color/colorRedAccent"
+        app:errorTextColor="@color/colorError"
         app:helperTextEnabled="false"
         app:hintAnimationEnabled="true"
         app:hintEnabled="true"
@@ -68,7 +68,7 @@
         app:boxStrokeColor="@color/colorAccent"
         app:errorEnabled="true"
         app:errorIconDrawable="@null"
-        app:errorTextColor="@color/colorRedAccent"
+        app:errorTextColor="@color/colorError"
         app:helperTextEnabled="false"
         app:hintAnimationEnabled="true"
         app:hintEnabled="true"
@@ -107,7 +107,7 @@
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="15sp"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorBackground"
         app:cornerRadius="4dp"
         app:layout_constraintBottom_toTopOf="@+id/button_register"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,7 +144,7 @@
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="15sp"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorBackground"
         app:cornerRadius="4dp"
         app:icon="@drawable/ic_navigate_next_white_24dp"
         app:iconSize="18dp"
