--- a/app/src/main/res/layout/fragment_downloading_chapters.xml
+++ b/app/src/main/res/layout/fragment_downloading_chapters.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -61,7 +62,7 @@
             android:fontFamily="@font/google_sans"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
