--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,9 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FFAB00</color>
     <color name="colorRedAccent">#F71A08</color>
+    <color name="colorError">#D32F2F</color>
 
-    <color name="colorBackground">#121212</color>
+    <color name="colorBackground">#1e1e1e</color>
     <color name="colorCardBackground">#3A3A3A</color>
 
     <color name="colorTextOnPrimaryDark">#ffffff</color>
