--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorError">#D32F2F</color>
 
     <color name="colorBackground">#1e1e1e</color>
-    <color name="colorCardBackground">#3A3A3A</color>
+    <color name="colorCardBackground">#2d2f31</color>
 
     <color name="colorTextOnPrimaryDark">#ffffff</color>
     <color name="colorTextOnPrimary">#ffffff</color>
